# paperless-llm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.frontend  LICENSE  Makefile  PLAN.md  README.md  config.example.yaml  docker-compose.yml  lefthook.yml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: docker-publish.yml
app/: globals.css  layout.tsx  page.tsx
app/documents/: page.tsx
app/pending/: page.tsx
app/prompts/: page.tsx
app/settings/: page.tsx
app/tags/: page.tsx
apps/api/: package.json
apps/api/backend/: pyproject.toml
apps/api/backend/agents/: prompts.py
apps/api/backend/data/: pending_reviews.json
apps/api/backend/jobs/: metadata_enhancement.py
apps/api/backend/prompts/de/: confirmation.md  tags_confirmation.md  title_confirmation.md
apps/api/backend/prompts/en/: confirmation.md  metadata_description.md
apps/api/backend/routers/: jobs.py
apps/backend/: Dockerfile  config.py  main.py  package.json  pyproject.toml  test_pipeline.py  vitest.config.ts  worker.py
apps/backend-ts/: package.json  tsconfig.json
apps/web/: .env.example  Dockerfile  components.json  eslint.config.mjs  index.html  next.config.ts  nginx.conf  package.json  playwright.config.ts  (+2 more)
backend/: Dockerfile  config.py  main.py  pyproject.toml  worker.py
components/: model-combobox.tsx  sidebar.tsx
i18n/: request.ts
lib/: api.ts
messages/: de.json  en.json
scripts/: migrate-to-tinybase.ts  record-demo.ts
(+323 files in other folders)
