[project]
name = "paperless-local-llm-backend"
version = "0.1.0"
description = "KI-gestütztes Dokumentenanalyse-System für Paperless-ngx"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "mistralai>=1.0.0",
    "qdrant-client>=1.12.0",
    "sse-starlette>=2.2.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "models", "routers", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # FastAPI Depends() in function defaults is intentional
    "B904",  # raise ... from err - too verbose for simple error handlers
    "E501",  # Line too long - handled by formatter
    "SIM105",  # contextlib.suppress - less explicit than try/except
    "SIM108",  # Ternary operator - can reduce readability
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
